--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     depends_on:
       - db
     environment:
-      - SECRET_KEY=
+      - SECRET_KEY=@)t5&vxc)n6ggw3*%e5k9!q#c*oe*n!7%28to_5w0y50)-sw9
       - DB_USER=postgres
       - DB_NAME=postgres
       - DB_PASSWORD=postgres
